force-app/main/default/objects/ssot__ContactPointEmail__dlm/fields/KQ_PartyId__c.field-meta.xml
<CustomField>
    <fullName>KQ_PartyId__c</fullName>
    <label>Key Qualifier Party</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_PartyId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>