force-app/main/default/objects/ssot__ContactPointEmail__dlm/fields/rel_1712301884669_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1712301884669_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_ContactPointEmail_ssot_Id_map_U_rel</label>
    <referenceTo>UnifiedLinkssotContactPointEmailTun1__dlm</referenceTo>
    <relationshipLabel>ssot_ContactPointEmail_ssot_Id_map_U_rel</relationshipLabel>
    <relationshipName>rel_1712301884669_end</relationshipName>
    <type>Lookup</type>
</CustomField>